--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "nodemon --exec babel-node app.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "express": "^4.16.3",
-    "fbgraph": "^1.4.4"
+    "fbgraph": "^1.4.4",
+    "form-data": "^2.3.2",
+    "node-fetch": "^2.1.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "jshint": "^2.9.5",
     "nodemon": "^1.17.5"
   }
 }
